--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -244,15 +244,15 @@ header
 /* -------------------------
 nav menu
 ----------------------------*/
-.header__menu {
+/* .header__menu {
   display: none;
-}
+} */
 .header__menu.open {
-  display: block;
+  opacity: 1;
+  visibility: visible;
 }
 .header__menu {
   position: fixed;
-  /* display: none; */
   top: 0;
   left: 0;
   width: 100%;
@@ -262,6 +262,9 @@ nav menu
   -webkit-overflow-scrolling: touch;
   z-index: 1000;
   font-family: var(--fontZenMaruGothic);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.6s ease;
 }
 .menu__container {
   display: flex;
@@ -276,6 +279,11 @@ nav menu
   min-height: 780px;
   box-sizing: border-box;
 }
+.menu__wrap.open {
+  opacity: 1;
+  visibility: visible;
+  transform: translateX(0);
+}
 .menu__wrap {
   position: relative;
   width: 100%;
@@ -287,6 +295,10 @@ nav menu
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   overflow-y: scroll;
+  transform: translateX(100%);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.6s cubic-bezier(1,0,.14,1.3);
 }
 .menu__inner {
   position: relative;
@@ -295,9 +307,10 @@ nav menu
   display: flex;
   flex-direction: column;
 }
-.menu__inner .menu__list .menu__item {
-  /* min-width: 257px; */
-  /* width: 50%; */
+.menu__inner .menu__list .menu__item a {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
 }
 .menu__inner .menu__list li {
   margin-bottom: 60px;
@@ -308,6 +321,7 @@ nav menu
   font-weight: bold;
   letter-spacing: 0.1rem;
   color: var(--palePink);
+  display: inline-block;
 }
 .menu__item--title {
   font-size: var(--fontSize26);
@@ -316,6 +330,7 @@ nav menu
   color: var(--textBlack);
   padding-top: 12px;
   transition: all 0.3s;
+  display: inline-block;
 }
 .menu__item--title:hover {
   color: var(--palePink);
@@ -1314,7 +1329,7 @@ nav menu
     justify-content: center;
     align-items: flex-end;
     width: 100%;
-    height: 100%;
+    height: 100dvh;
     max-width: 1400px;
     margin-left: auto;
     margin-right: 0;
@@ -1326,7 +1341,7 @@ nav menu
     width: 100%;
     height: 100%;
     max-width: 726px;
-    padding: 82px 30px 35px 30px;
+    padding: 60px 30px 35px 30px;
     background: #fff;
     box-sizing: border-box;
     -webkit-backface-visibility: hidden;
@@ -1351,7 +1366,7 @@ nav menu
     order: 6;
   } */
   .menu__inner .menu__list li:not(:last-child) {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
   .menu__item--subTitle {
     font-size: var(--fontSize14);
