--- a/src/assets/css/page.top.css
+++ b/src/assets/css/page.top.css
@@ -979,7 +979,7 @@ message
     text-align: center;
   }
   .message .page__title {
-    display: flex;
+    /* display: flex; */
     margin: 0 auto;
     justify-content: center;
     text-align: center;
