--- a/src/assets/css/anime.css
+++ b/src/assets/css/anime.css
@@ -2,10 +2,51 @@
     opacity: 0;
 }
 
+/*mainタイトルアニメーション*/
+.mainTitle__img--speech {
+    opacity: 0;
+    transform: translateY(20%) scale(0.75);
+}
+.mainTitle__img--speech.is-visible {
+    transition: transform .3s cubic-bezier(0.65, 1.8, 0.5, 0.8) .3s,opacity .3s cubic-bezier(0.55, 0.05, 0.22, 0.99) .3s;
+    transition-delay: 0.6s;
+    transform: translateY(0) scale(1);
+    opacity: 1;
+    transform-origin: center bottom;
+}
+.mainTitle__img--title {
+    opacity: 0;
+    transform: translateY(20%) scale(0.75);
+}
+.mainTitle__img--title.is-visible {
+    transition: transform .3s cubic-bezier(0.65, 1.8, 0.5, 0.8) .3s,opacity .3s cubic-bezier(0.55, 0.05, 0.22, 0.99) .3s;
+    transform: translateY(0) scale(1);
+    opacity: 1;
+    transform-origin: center bottom;
+}
+
+@keyframes mainTitle {
+    0% {
+        transform: scale(0);
+        -webkit-transform: scale(0);
+        opacity: 0.6;
+    }
+    60% {
+        transform: scale(1.3);
+        -webkit-transform: scale(1.3);
+    }
+    100% {
+        transform: scale(1);
+        -webkit-transform: scale(1);
+        opacity: 1;
+    }
+}
+
 /*ポップアップする動き*/
 .popup {
     animation: popup 0.6s cubic-bezier(0.5, 0.05, 0.1, 0.3) forwards;
     opacity: 0;
+    transform-origin: center bottom;
 }
 @keyframes popup {
     0% {
@@ -153,6 +194,12 @@
 }
 
 .line__stamp--bg {
+    animation: rotation 8s linear infinite;
+}
+.loading__surround1 img {
+    animation: rotation 4s linear infinite;
+}
+.loading__surround2 img {
     animation: rotation 8s linear infinite;
 }
 
@@ -396,6 +443,19 @@
 }
 
 /*sleepエフェクト*/
+.sleep__chara {
+    animation: sleep_chara 1.6s ease-in-out 0s infinite alternate;
+}
+
+@keyframes sleep_chara {
+    from {
+        transform: scale(0.96,0.94);
+    }
+    to {
+        transform: scale(1,1);
+    }
+}
+
 .sleep__effect {
     animation: sleep_zz 1.6s ease-in-out 0s infinite alternate;
 }
