--- a/src/assets/css/variable.css
+++ b/src/assets/css/variable.css
@@ -14,6 +14,7 @@
   --fontSize20: clamp(1rem, .892rem + .46vw, 1.25rem);
   --fontSize22: clamp(1.125rem, 1.017rem + .46vw, 1.375rem);
   --fontSize23: clamp(1.313rem, 1.267rem + .23vw, 1.438rem);
+  --fontSize24: clamp(1.28rem, 0.485rem + 1.07vw, 1.5rem);
   --fontSize25: clamp(1.25rem, 1.136rem + .57vw, 1.563rem);
   --fontSize26: clamp(1.25rem, 1.088rem + .69vw, 1.625rem);
   --fontSize28: clamp(1.375rem, 1.245rem + 0.53vw, 1.75rem);
