--- a/src/assets/css/anime.css
+++ b/src/assets/css/anime.css
@@ -489,6 +489,18 @@
     transform-origin: center bottom;
     opacity: 1;
 }
+.secretList__speech {
+    transform: translateY(100%) translateX(-50%);
+    -webkit-transform: translateY(100%) translateX(-50%);
+    opacity: 0;
+}
+.secretList__speech.is-visible {
+    transition: transform .3s cubic-bezier(0.65, 1.8, 0.5, 0.8) .3s,opacity .3s cubic-bezier(0.55, 0.05, 0.22, 0.99) .3s;
+    transform: translateY(0) translateX(-50%) scale(1);
+    -webkit-transform: translateY(0) translateX(-50%) scale(1);
+    transform-origin: center bottom;
+    opacity: 1;
+}
 
 /*animetion delay*/
 .delay-time02 {
