--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1142,6 +1142,9 @@ lower common
     max-width: none;
     height: 100vh;
   }
+  .page__title {
+    font-weight: 900;
+  }
 }
 @media screen and (max-width:1020px) and (min-width:768px) {
   .footer__tel {
