全ページ基本アニメーション追加

--- a/src/assets/css/page.characters.css
+++ b/src/assets/css/page.characters.css
@@ -171,6 +171,7 @@ member
     padding: 5px 72px 7px;
     text-decoration: none;
     position: relative;
+    transition: all 0.3s;
 }
 .lineBtn:hover {
     box-shadow: none;
