--- a/src/assets/css/anime.css
+++ b/src/assets/css/anime.css
@@ -43,10 +43,12 @@
 }
 
 /*ポップアップする動き*/
-.popup {
+.popup, .initial-popup {
     animation: popup 0.6s cubic-bezier(0.5, 0.05, 0.1, 0.3) forwards;
     opacity: 0;
     transform-origin: center bottom;
+    position: relative;
+    z-index: 100;
 }
 @keyframes popup {
     0% {
@@ -181,11 +183,11 @@
 }
 
 /* rotate */
-.about__chara--surround1 img {
+.about__chara--surround1 img, .lower__chara--surround1 img {
     animation: rotation 4s linear infinite;
 }
 
-.about__chara--surround2 img {
+.about__chara--surround2 img, .lower__chara--surround2 img {
     animation: rotation 8s linear infinite;
 }
 
@@ -240,6 +242,14 @@
     animation: MoveLeft2 20s infinite linear;
 }
 
+.news .infinite__scroll p:nth-child(odd) {
+    animation: MoveLeft 40s -20s infinite linear;
+}
+
+.news .infinite__scroll p:nth-child(even) {
+    animation: MoveLeft2 40s infinite linear;
+}
+
 @keyframes MoveLeft {
     from {
         transform: translateX(100%);
@@ -284,6 +294,14 @@
 
 .infinite__scroll--reverse img:nth-child(even) {
     animation: MoveRight2 20s infinite linear;
+}
+
+.news .infinite__scroll--reverse p:nth-child(odd) {
+    animation: MoveRight 40s -20s infinite linear;
+}
+
+.news .infinite__scroll--reverse p:nth-child(even) {
+    animation: MoveRight2 40s infinite linear;
 }
 
 @keyframes MoveRight {
@@ -427,7 +445,7 @@
 
 /*news page*/
 .cycling {
-    animation: cycling 3s linear forwards;
+    animation: cycling 2s linear forwards;
 }
 
 /*範囲外から出現させる*/
@@ -468,11 +486,46 @@
         transform: translate(0, 0) scale(1.1,1.1);
     }
 }
+/*ぐらぐらアニメーション*/
+.guragura {
+    animation: guragura 1.2s linear 0s infinite alternate;
+}
+
+@keyframes guragura {
+    0% {
+        transform: translateX(-3%) rotate(-2deg);
+    }
+    20% {
+        transform: translateX(0%) rotate(0);
+    }
+    40% {
+        transform: translateX(3%) rotate(2deg);
+    }
+    60% {
+        transform: translateX(0%) rotate(0);
+    }
+    80% {
+        transform: translateX(0%) rotate(0);
+    }
+    100% {
+        transform: translateX(0) rotate(0);
+    }
+}
+
 /*セクションタイトルアニメーション*/
 .page__title .letter {
     display: inline-block;
     transform: translateY(100%);
     opacity: 0;
+}
+.single__title {
+    transform: translateY(100%);
+    opacity: 0;
+}
+.page__title .letter.initial-visible, .single__title.initial-visible {
+    transition: transform .3s cubic-bezier(0.65, 1.8, 0.5, 0.8) 0s,opacity .3s cubic-bezier(0.55, 0.05, 0.22, 0.99) 0s;
+    transform: translateY(0);
+    opacity: 1;
 }
 .page__title .letter.is-visible {
     transition: transform .3s cubic-bezier(0.65, 1.8, 0.5, 0.8) 0s,opacity .3s cubic-bezier(0.55, 0.05, 0.22, 0.99) 0s;
@@ -483,23 +536,173 @@
     transform: translateY(100%);
     opacity: 0;
 }
+.page__subTitle.initial-visible {
+    transition: transform .3s cubic-bezier(0.65, 1.8, 0.5, 0.8) .3s,opacity .3s cubic-bezier(0.55, 0.05, 0.22, 0.99) .3s;
+    transform: scale(1);
+    transform-origin: center bottom;
+    opacity: 1;
+}
 .page__subTitle.is-visible {
     transition: transform .3s cubic-bezier(0.65, 1.8, 0.5, 0.8) .3s,opacity .3s cubic-bezier(0.55, 0.05, 0.22, 0.99) .3s;
     transform: scale(1);
     transform-origin: center bottom;
     opacity: 1;
 }
-.secretList__speech {
+.secretList__speech, .flow__item--title {
     transform: translateY(100%) translateX(-50%);
     -webkit-transform: translateY(100%) translateX(-50%);
     opacity: 0;
 }
-.secretList__speech.is-visible {
+.secretList__speech.is-visible, .flow__item--title.is-visible {
     transition: transform .3s cubic-bezier(0.65, 1.8, 0.5, 0.8) .3s,opacity .3s cubic-bezier(0.55, 0.05, 0.22, 0.99) .3s;
     transform: translateY(0) translateX(-50%) scale(1);
     -webkit-transform: translateY(0) translateX(-50%) scale(1);
     transform-origin: center bottom;
     opacity: 1;
+}
+
+.popup__text {
+    transform: translateY(100%);
+    -webkit-transform: translateY(100%);
+    opacity: 0;
+}
+.popup__text.is-visible, .popup__text.delay-visible {
+    transition: transform .3s cubic-bezier(0.65, 1.8, 0.5, 0.8) .3s,opacity .3s cubic-bezier(0.55, 0.05, 0.22, 0.99) .3s;
+    transform: translateY(0) scale(1);
+    -webkit-transform: translateY(0) scale(1);
+    transform-origin: center bottom;
+    opacity: 1;
+}
+
+/*text出現アニメーション*/ 
+.lower__textInner--title {
+    transform: translate(-100%, 0);
+    transition: transform cubic-bezier(0.215, 0.61, 0.355, 1) 1s;
+    /* transition-delay: 1s; */
+    overflow: hidden;
+}
+.lower__textInner--title p {
+    display: block;
+    transform: translate(100%, 0);
+    transition: transform cubic-bezier(0.215, 0.61, 0.355, 1) 1s;
+    /* transition-delay: 1s; */
+}
+.lower__textInner--title.initial-slideVisible, .lower__textInner--title.initial-slideVisible p {
+    transform: translate(0, 0);
+}
+
+/*aboutページ天使のアニメーション*/
+.angel__chara {
+    animation: angel_huwahuwa 1.6s ease-in-out 0s infinite alternate;
+}
+
+@keyframes angel_huwahuwa {
+    from {
+        transform: translate(0, 8%);
+    }
+    to {
+        transform: translate(0, 0);
+    }
+}
+
+/*ハートのアニメーション*/
+.heart__group {
+    position: relative;
+}
+.heart__group .heart01 {
+    position: absolute;
+    animation: show_heart01 2.6s ease-in-out 0s infinite;
+}
+
+@keyframes show_heart01 {
+    0% {
+        transform: translate(180px, 100px) scale(0, 0);
+        opacity: 0.8;
+    }
+    40% {
+        transform: translate(200x, 100px) scale(1, 1);
+        opacity: 1;
+    }
+    60% {
+        transform: translate(200x, 100px) scale(0, 0);
+        opacity: 0.8;
+    }
+    100% {
+        transform: translate(200x, 100px) scale(0, 0);
+        opacity: 0;
+    }
+}
+
+.heart__group .heart02 {
+    position: absolute;
+    animation: show_heart02 2.6s ease-in-out 0s infinite;
+}
+
+@keyframes show_heart02 {
+    0% {
+        transform: translate(190px, 100px) scale(0, 0);
+        opacity: 0.8;
+    }
+    40% {
+        transform: translate(210x, 100px) scale(1, 1);
+        opacity: 1;
+    }
+    60% {
+        transform: translate(210x, 100px) scale(0, 0);
+        opacity: 0.8;
+    }
+    100% {
+        transform: translate(210x, 100px) scale(0, 0);
+        opacity: 0;
+    }
+}
+
+.heart__group .heart03 {
+    position: absolute;
+    animation: show_heart03 2.6s ease-in-out 0s infinite;
+}
+
+@keyframes show_heart03 {
+    0% {
+        transform: translate(170px, 100px) scale(0, 0);
+        opacity: 0.8;
+    }
+    40% {
+        transform: translate(200x, 100px) scale(1, 1);
+        opacity: 1;
+    }
+    60% {
+        transform: translate(200x, 100px) scale(0, 0);
+        opacity: 0.8;
+    }
+    100% {
+        transform: translate(200x, 100px) scale(0, 0);
+        opacity: 0;
+    }
+}
+
+.heart__group .heart04 {
+    position: absolute;
+    animation: show_heart04 2.6s ease-in-out 0s infinite;
+}
+
+@keyframes show_heart04 {
+    0% {
+        transform: translate(170px, 100px) scale(0, 0);
+        opacity: 0.8;
+    }
+    40% {
+        transform: translate(200x, 100px) scale(1, 1);
+        opacity: 1;
+    }
+    60% {
+        transform: translate(200x, 100px) scale(0, 0);
+        opacity: 0.8;
+    }
+    100% {
+        transform: translate(200x, 100px) scale(0, 0);
+        opacity: 0;
+    }
 }
 
 /*animetion delay*/
