--- a/src/assets/css/page.service.css
+++ b/src/assets/css/page.service.css
@@ -237,7 +237,7 @@ flow
     padding: 15px 0;
     width: 392px;
     position: relative;
-    transform: translateX(-50%);
+    transform: translateX(-50%) translateY(50%);
     z-index: 10;
     letter-spacing: 0.06rem;
 }
