--- a/src/assets/css/anime.css
+++ b/src/assets/css/anime.css
@@ -518,11 +518,11 @@
     transform: translateY(100%);
     opacity: 0;
 }
-.single__title {
+.page__title--nosub {
     transform: translateY(100%);
     opacity: 0;
 }
-.page__title .letter.initial-visible, .single__title.initial-visible {
+.page__title .letter.initial-visible, .page__title--nosub.initial-visible {
     transition: transform .3s cubic-bezier(0.65, 1.8, 0.5, 0.8) 0s,opacity .3s cubic-bezier(0.55, 0.05, 0.22, 0.99) 0s;
     transform: translateY(0);
     opacity: 1;
