--- a/src/assets/css/loading.css
+++ b/src/assets/css/loading.css
@@ -84,6 +84,25 @@
     text-shadow: rgb(35, 24, 21) 2px 0px 0px, rgb(35, 24, 21) 1.75517px 0.958851px 0px, rgb(35, 24, 21) 1.0806px 1.68294px 0px, rgb(35, 24, 21) 0.141474px 1.99499px 0px, rgb(35, 24, 21) -0.832294px 1.81859px 0px, rgb(35, 24, 21) -1.60229px 1.19694px 0px, rgb(35, 24, 21) -1.97998px 0.28224px 0px, rgb(35, 24, 21) -1.87291px -0.701566px 0px, rgb(35, 24, 21) -1.30729px -1.5136px 0px, rgb(35, 24, 21) -0.421592px -1.95506px 0px, rgb(35, 24, 21) 0.567324px -1.91785px 0px, rgb(35, 24, 21) 1.41734px -1.41108px 0px, rgb(35, 24, 21) 1.92034px -0.558831px 0px;
 }
 
+@media screen and (max-width: 500px) {
+    .loading__img {
+        gap: 1.86vw;
+    }
+    .loadingChara {
+        width: 105px;
+    }
+    .loading__text p {
+        font-size: var(--fontSize16);
+        text-shadow: rgb(35, 24, 21) 1.4px 0px 0px, rgb(35, 24, 21) 1.45517px 0.758851px 0px, rgb(35, 24, 21) 0.8306px 1.18294px 0px, rgb(35, 24, 21) 0.111474px 1.39999px 0px, rgb(35, 24, 21) -0.632294px 1.31859px 0px, rgb(35, 24, 21) -1.28229px 0.89694px 0px, rgb(35, 24, 21) -1.37998px 0.22224px 0px, rgb(35, 24, 21) -1.37291px -0.501566px 0px, rgb(35, 24, 21) -1.05729px -1.1536px 0px, rgb(35, 24, 21) -0.361592px -1.38506px 0px, rgb(35, 24, 21) 0.467324px -1.32785px 0px, rgb(35, 24, 21) 1.11734px -1.11108px 0px, rgb(35, 24, 21) 1.38034px -0.458831px 0px;
+    }
+    .loading__surround1 {
+        width: 192px;
+    }
+    .loading__surround2 {
+        width: 240px;
+    }
+}
+
 @keyframes loadAnime {
     0% {
         transform: translateY(5%);
