--- a/src/assets/css/page.top.css
+++ b/src/assets/css/page.top.css
@@ -705,11 +705,7 @@ online
   top: 92px;
   width: 100%;
   transition: all 0.3s ease;
-}
-.online__sale--img::before {
-  content: "";
-  display: block;
-  padding-top: 100%; /* 1:1 */
+  z-index: 100;
 }
 .online__sale--img:hover {
   top: 84px;
@@ -1474,6 +1470,7 @@ online
     max-width: 186px;
     position: sticky;
     display: block;
+    height: 186px;
   }
   .online__chara--img {
     display: none;
