--- a/src/assets/css/page.news.css
+++ b/src/assets/css/page.news.css
@@ -157,7 +157,10 @@ news
 }
 .news__pagenation .active a, .news__pagenation .current a {
     color: var(--palePink);
-    transition: color 0.2s ease;
+    transition: color 0.3s ease;
+}
+.news__pagenation .page-item a {
+    transition: color 0.3s ease;
 }
 .news__pagenation .page-item:hover a {
     color: var(--palePink);
