serviceの画像追加

--- a/src/assets/css/page.service.css
+++ b/src/assets/css/page.service.css
@@ -470,13 +470,13 @@ introduction
     max-height: 460px;
     width: 44.3vw;
     height: 30.42vw;
-    border: 3px solid var(--textBlack);
+    /* border: 3px solid var(--textBlack); */
     position: relative;
     z-index: 2;
-    background-color: #D9D9D9;
 }
 .introduction__point .point__content {
     max-width: 622px;
+    max-width: 520px;
     max-height: 460px;
     width: 41.13vw;
     height: 30.42vw;
@@ -633,6 +633,12 @@ introduction
 }
 .bgPinkText__inner.palePink .bgPinkText {
     color: var(--main-color);
+}
+.point__slick .slick-list {
+    border: 3px solid var(--textBlack);
+}
+.point__slick .slick-dots {
+    bottom: -40px;
 }
 /* -------------------------
 service message
@@ -1145,10 +1151,10 @@ introduction
         max-height: 460px;
         width: 79.48vw;
         height: 61.53vw;
-        border: 2px solid var(--textBlack);
+        /* border: 2px solid var(--textBlack); */
         position: relative;
         z-index: 2;
-        background-color: #D9D9D9;
+        top: 5.12vw;
     }
     .introduction__point .point__content {
         max-width: 622px;
@@ -1273,5 +1279,12 @@ introduction
     .bgPinkText__inner {
         display: none;
         top: 30%;
+    }
+
+    .point__slick .slick-list {
+        border: 2px solid var(--textBlack);
+    }
+    .point__slick .slick-dots {
+        bottom: 10px;
     }
 }
